--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -49,7 +49,7 @@
 					</form>
 				</div>
 			</div>
-			<p class="small">&copy; GB {%now 'Y'%}</p>
+			<p class="small">&copy; Nariman Mukhtarov {%now 'Y'%}</p>
 			<div class="social">
 				<a href="#" class="social1"></a>
 				<a href="#" class="social2"></a>
