--- a/main/templates/main/inc/inc_categories_menu.html
+++ b/main/templates/main/inc/inc_categories_menu.html
@@ -1,4 +1,9 @@
 <ul class="links-menu">
+
+    <li>
+        <a>Бренды</a>
+        <hr>
+    </li>
     <li>
         <a href="{%url 'products:category' 0%}">Все</a>
     </li>
