--- a/main/templates/main/product.html
+++ b/main/templates/main/product.html
@@ -40,7 +40,7 @@
 			<div class="related">
 				<div class="title clearfix">
 					<h2>Похожие продукты</h2>
-					<a class="explore" href="http://127.0.0.1:8000/products/category/0/">показать все <img src="/static/img/arrow.png" alt=""></a>
+					<a class="explore" href="{%url 'products:category' product.category.pk%}">показать все <img src="/static/img/arrow.png" alt=""></a>
 				</div>
 				<div class="related-products clearfix">
 					{%for product in same_product%}
