--- a/basketapp/templates/basketapp/base.html
+++ b/basketapp/templates/basketapp/base.html
@@ -28,7 +28,7 @@
             Ваша корзина,  {%if user.first_name%}
             {{user.first_name| title}}
             {%else%}
-            Покупатьль
+            Покупатель
             {%endif%}
         </div>
         {%block content%}
