--- a/basketapp/templates/basketapp/inc/inc_basket.html
+++ b/basketapp/templates/basketapp/inc/inc_basket.html
@@ -1,6 +1,6 @@
 {% for item in basket_items %}
             <div class="basket_record">
-                <img src="/media/{{item.product.image}}" alt = '{{item.product.name}}' height="150px">
+                <img src="{{item.product.image}}" alt = '{{item.product.name}}' height="150px">
                 <span class="category_name">{{item.product.category.name}}</span>
                 <span class="product_name">{{item.product.name}}</span>
                 <input type="number" name="{{item.pk}}" min="0"
