change authapp, send mail with order

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -11,7 +11,7 @@
 				<h3 class="green">выбирай</h3>
 				<h3 class="big"> Лучшие люстры</h3>
 
-				<a href="{%url 'products:product' 992 %}" class="button-order">заказать <img src="/static/img/arrow.png" alt=""></a>
+				<a href="/products" class="button-order">каталог <img src="/static/img/arrow.png" alt=""></a>
 			</div>	
 			<div class="navi">
 				{%for product in products%}
