add link admin in menu superuser

--- a/main/templates/main/inc/inc_main_menu.html
+++ b/main/templates/main/inc/inc_main_menu.html
@@ -20,6 +20,11 @@
                        заказы
             </a>
         </li>
+        <li>
+            {%if user.is_superuser%}
+            <a href="/admin/">админ</a>
+            {%endif%}
+        </li>
 
         <li><a href="{% url 'auth:logout'%}">Выход</a></li>
     {%else%}
