--- a/main/templates/main/inc/inc_main_menu.html
+++ b/main/templates/main/inc/inc_main_menu.html
@@ -30,9 +30,8 @@
     {%else%}
         <li><a href="{% url 'auth:login'%}">Вход</a></li>
     {%endif%}
-
 </ul>
-<a href="#" class="search"></a>
+<a data-bs-toggle="modal" data-bs-target="#exampleModal" class="search"></a>
 <a href="{%url 'basket:basket'%}" class="basket">
     <span>
     {%if basket%}
@@ -40,4 +39,27 @@
         {{basket.0.total_quantity}} шт
 
     {%endif%}
+
         </span></a>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+      <form action="{% url 'main:search' %}" method="get">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Поиск</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+          <div class="input-group mb-3">
+              <input name="search" type="text" placeholder="Что вы ищите?" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+        <button type="submit" class="btn btn-primary">Искать</button>
+      </div>
+    </div>
+          </form>
+  </div>
+</div>
