--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,10 +1,9 @@
 {%extends 'main/base.html'%}
 {%load static%}
-<!DOCTYPE html>
 	{%block menu%}
 		<div class="slider">
 			<div class="header clearfix">
-				<a class="logo">ЛУЧИ СВЕТА</a>
+				<p class="logo">ЛУЧИ СВЕТА</p>
 				{%include 'main/inc/inc_main_menu.html'%}
 			</div>
 			<div class="text-slider">
