--- a/main/templates/main/product.html
+++ b/main/templates/main/product.html
@@ -3,7 +3,7 @@
 {%block menu%}
 		<div class="hero-white">
 			<div class="header clearfix">
-				<a href="index.html" class="logo"></a>
+				<p class="logo">ЛУЧИ СВЕТА</p>
 				{%include 'main/inc/inc_main_menu.html'%}
 			</div>
 		</div>
