--- a/main/templates/main/products.html
+++ b/main/templates/main/products.html
@@ -4,7 +4,7 @@
 
 		<div class="hero-white">
 			<div class="header clearfix">
-				<a class="logo">ЛУЧИ СВЕТА</a>
+				<p class="logo">ЛУЧИ СВЕТА</p>
 				{%include 'main/inc/inc_main_menu.html'%}
 			</div>
 		</div>
