--- a/static/css/style.css
+++ b/static/css/style.css
@@ -716,7 +716,7 @@ html, body {
 	font-family: 'Neucha', cursive;
 	font-size: 55px;
 	margin-top: 63px;
-	width: 385px;
+	width: 290px;
 	height: 52px;
 	float: left;
 }
@@ -1307,7 +1307,7 @@ td:first-child {
 }
 
 .text-footer:nth-child(2) {
-	width: 422px;
+	width: 250px;
 }
 .text-footer:nth-child(3) {
 	width: 363px;
@@ -1589,13 +1589,13 @@ td:first-child {
 .details-products {
 	padding-left: 98px;
 	margin-top: 98px;
-	/*height: 651px; */
+	height: 651px;
 	height: 551px;
 }
 .details-slider {
 	width: 570px;
 	float: left;
-	margin-right: 30px;
+	/*margin-right: 30px;*/
 }
 .slider-product {
 	width: 570px;
@@ -1631,7 +1631,7 @@ td:first-child {
 .description {
 	width: 535px;
 	float: right;
-	padding-left: 35px
+	/*padding-left: 35px*/
 }
 .description .big-bold {
 	/*text-transform: capitalize;*/
@@ -1733,7 +1733,7 @@ td:first-child {
 	margin-right: 30px;
 	display: block;
 	height: 370px;
-	width: 370px;
+	width: 345px;
 	position: relative;
 }
 .related-products .block:nth-child(3n) {
@@ -1770,4 +1770,29 @@ td:first-child {
 }
 .related-products a:hover .text{
 	display: block;
+}
+.table {
+padding-top: 100px;
+padding-left: 120px;
+padding-right: 130px;
+}
+
+.table h3 {
+text-align: center;
+margin-bottom: 30px;
+}
+
+.table_search td:first-child {
+	width: 20px;
+}
+
+#td_article{
+    width: 100px;
+}
+#td_name {
+    width: 500px;
+}
+a {
+    text-decoration: none;
+    color:#555 !important;
 }
