--- a/static/bootstrap/css/bootstrap-reboot.css
+++ b/static/bootstrap/css/bootstrap-reboot.css
@@ -7,9 +7,9 @@
  */
 *,
 *::before,
-*::after {
+/**::after {
   box-sizing: border-box;
-}
+}*/
 
 @media (prefers-reduced-motion: no-preference) {
   :root {
@@ -174,13 +174,13 @@ sup {
   top: -0.5em;
 }
 
-a {
+/*a {
   color: #0d6efd;
   text-decoration: underline;
-}
-a:hover {
+}*/
+/*a:hover {
   color: #0a58ca;
-}
+}*/
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
   color: inherit;
