--- a/main/templates/main/product.html
+++ b/main/templates/main/product.html
@@ -16,7 +16,61 @@
 			<div class="details-products">
 				<div class="details-slider">
 					<div class="slider-product">
-						<img src="{{product.image}}" height="500px">
+
+						<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+   {%if product.image_2%}
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    {%endif%}
+	  {%if product.image_3%}
+	  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		{%endif%}
+	  {%if product.image_4%}
+	  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		{%endif%}
+	  {%if product.image_5%}
+    <div class="carousel-item">
+      <img src="{{product.image_3}}" class="d-block w-100" alt="...">
+    </div>
+	  {%endif%}
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="10000">
+      <img src="{{product.image}}" class="d-block w-100" alt="...">
+    </div>
+	  {%if product.image_2%}
+    <div class="carousel-item" data-bs-interval="2000">
+      <img src="{{product.image_2}}" class="d-block w-100" alt="...">
+    </div>
+	  {%endif%}
+	  {%if product.image_3%}
+    <div class="carousel-item">
+      <img src="{{product.image_3}}" class="d-block w-100" alt="...">
+    </div>
+	  {%endif%}
+	  {%if product.image_4%}
+    <div class="carousel-item">
+      <img src="{{product.image_4}}" class="d-block w-100" alt="...">
+    </div>
+	  {%endif%}
+	  {%if product.image_5%}
+    <div class="carousel-item">
+      <img src="{{product.image_5}}" class="d-block w-100" alt="...">
+    </div>
+	  {%endif%}
+  </div>
+							{%if product.image_2%}
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+							{%endif%}
+</div>
 					</div>
 				</div>
 
@@ -37,6 +91,96 @@
 					</div>
 				</div>
 			</div>
+<div>
+
+			<table class="table" id="table_description">
+
+  <tbody>
+  <h4 style="padding-top:50px; padding-left:16%; text-decoration: underline;">Харрактеристики</h4>
+    <tr>
+      <td>Артикул</td>
+      <td>{{product.article}}</td>
+    </tr>
+    <tr>
+      <td>Серия</td>
+      <td>{{product.series}}</td>
+    </tr>
+	{%if product.type %}
+    <tr>
+      <td>Тип</td>
+      <td>{{product.type}}</td>
+    </tr>
+	{%endif%}
+	{%if product.type_2 %}
+	<tr>
+		<td>Подтип</td>
+		<td>{{product.type_2}}</td>
+	</tr>
+	{%endif%}
+	{%if product.material %}
+  	<tr>
+		<td>Материал основы</td>
+		<td>{{product.material}}</td>
+	</tr>
+	{%endif%}
+	{%if product.color %}
+  	<tr>
+		<td>Цвет основы</td>
+		<td>{{product.color}}</td>
+	</tr>
+	{%endif%}
+	{%if product.lamps %}
+  	<tr>
+		<td>Количество ламп</td>
+		<td>{{product.lamps}}</td>
+	</tr>
+	{%endif%}
+	{%if product.lamps_type %}
+  	<tr>
+		<td>тип ламп</td>
+		<td>{{product.lamps_type}}</td>
+	</tr>
+	{%endif%}
+	{%if product.power %}
+	<tr>
+		<td>Мощность ламп</td>
+		<td>{{product.power}}</td>
+	</tr>
+	{%endif%}
+	{%if product.length %}
+  	<tr>
+		<td>Длина (см)</td>
+		<td>{{product.length}}</td>
+	</tr>
+	{%endif%}
+	{%if product.width%}
+  	<tr>
+		<td>Ширина (см)</td>
+		<td>{{product.width}}</td>
+	</tr>
+  {%endif%}
+  {%if product.height%}
+  	<tr>
+		<td>Высота (см)</td>
+		<td>{{product.height}}</td>
+	</tr>
+  {%endif%}
+  {%if product.diameter%}
+  	<tr>
+		<td>Диаметр (см)</td>
+		<td>{{product.diameter}}</td>
+	</tr>
+  {%endif%}
+	{%if product.weight%}
+  	<tr>
+		<td>Вес (кг)</td>
+		<td>{{product.weight}}</td>
+	</tr>
+  {%endif%}
+  </tbody>
+</table>
+</div>
+
 			<div class="related">
 				<div class="title clearfix">
 					<h2>Похожие продукты</h2>
