--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -1,8 +1,4 @@
 {% extends 'authapp/base.html' %}
-
-
-
-
 {{%block content%}
   <body class="text-center">
 
@@ -21,6 +17,7 @@
         <input type="checkbox" value="remember-me"> запомнить
       </label>
     </div>
+    <a role="button" href="{%url 'auth:anonym'%}" class="w-100 btn btn-lg btn-warning">Заказ без регистрации</a>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Вход</button>
     <a class="nav-link active" aria-current="page" href="{%url 'authapp:register'%}">Регистрация</a>
     <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
