--- a/main/templates/main/inc/inc_main_menu.html
+++ b/main/templates/main/inc/inc_main_menu.html
@@ -1,36 +1,4 @@
-<ul class="menu">
-    <li><a href= "{% url 'main'%}" {%if request.resolver_match.url_name == 'main'%}
-        class="active"{%endif%}>домой</a></li>
-    <li><a href="{% url 'products:index'%}" {%if request.resolver_match.namespace == 'products'%}
-        class="active"{%endif%}>продукты</a></li>
-    <li><a href="{% url 'contacts'%}" {%if request.resolver_match.url_name == 'contacts'%}
-        class="active"{%endif%}>контакты</a></li>
-    {%if user.is_authenticated%}
-        <li><a href="{% url 'auth:edit'%}">
-            {%if user.first_name%}
-                {{user.first_name}}
-            {%elif user%}
-                {{user}}
-            {%else%}
-                Пользователь
-            {%endif%}
-        </a></li>
-        <li>
-            <a href="{% url 'orderapp:order_list' %}">
-                       заказы
-            </a>
-        </li>
-        <li>
-            {%if user.is_superuser%}
-            <a href="/admin/">админ</a>
-            {%endif%}
-        </li>
 
-        <li><a href="{% url 'auth:logout'%}">Выход</a></li>
-    {%else%}
-        <li><a href="{% url 'auth:login'%}">Вход</a></li>
-    {%endif%}
-</ul>
 <a data-bs-toggle="modal" data-bs-target="#exampleModal" class="search"></a>
 <a href="{%url 'basket:basket'%}" class="basket">
     <span>
@@ -39,6 +7,60 @@
         {{basket.0.total_quantity}} шт
     {%endif%}
         </span></a>
+
+<nav class="menu navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item ">
+            {% if request.resolver_match.url_name == 'main' %}
+            <a class="nav-link active" aria-current="page" href= "{% url 'main'%}">домой</a>
+            {%else%}
+            <a class="nav-link" aria-current="page" href= "{% url 'main'%}">домой</a>
+            {%endif%}
+        </li>
+        <li class="nav-item">
+            {% if request.resolver_match.url_name == 'product' or request.resolver_match.url_name == 'category' or request.resolver_match.url_name == 'index' %}
+           <a class="nav-link active" href="{% url 'products:index'%}">каталог</a>
+            {%else%}
+            <a class="nav-link" href="{% url 'products:index'%}">каталог</a>
+            {%endif%}
+        </li>
+        <li class="nav-item">
+            {% if request.resolver_match.url_name == 'contacts' %}
+          <a class="nav-link active" href="{% url 'contacts'%}" >контакты</a>
+            {%else%}
+            <a class="nav-link" href="{% url 'contacts'%}" >контакты</a>
+            {%endif%}
+        </li>
+          {%if user.is_authenticated%}
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="{% url 'auth:edit'%}" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+  {%if user.first_name%}
+                {{user.first_name}}
+            {%elif user%}
+                {{user}}
+            {%else%}
+                Пользователь
+            {%endif%}</a>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+    <li style="margin-bottom: 10px;"><a href="{% url 'orderapp:order_list' %}">
+                       заказы
+            </a></li>
+      {%if superuser%}
+      <li style="margin-bottom: 10px;"><a href="/admin/">админ</a>
+      {%endif%}
+    <li style="margin-bottom: 10px;"><li><a href="{% url 'auth:logout'%}">Выход</a></li>
+  </ul>
+        </li>
+          {%else%}
+        <li class="nav-item"><a class="nav-link" href="{% url 'auth:login'%}">Вход</a></li>
+    {%endif%}
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
