--- a/main/templates/main/inc/inc_main_menu.html
+++ b/main/templates/main/inc/inc_main_menu.html
@@ -1,6 +1,6 @@
 
 
-<nav class="menu navbar navbar-expand-lg navbar-light bg-light">
+<nav class="menu navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
