--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -2,7 +2,7 @@
 {{%block content%}
   <body class="text-center">
 
-<main class="form-signin">
+<main class="form-signin shadow-lg p-3 mb-5 bg-body rounded">
   <form method="post">
     <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
     <h3 class="h3 mb-3 fw-normal">Введите логин и пароль</h3>
@@ -20,6 +20,7 @@
     <a role="button" href="{%url 'auth:anonym'%}" class="w-100 btn btn-lg btn-warning">Заказ без регистрации</a>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Вход</button>
     <a class="nav-link active" aria-current="page" href="{%url 'authapp:register'%}">Регистрация</a>
+    <a class="nav-link active" aria-current="page" href="{%url 'main'%}">на главную</a>
     <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
   </form>
 </main>
