change css style login and anonym form

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -64,7 +64,7 @@
 			</div>
 
 			<p class="small"><a href="{%url 'main:info'%}">Положения &amp; Условия  /  Конфиденциальность &amp; Cookies</a></p>
-			<p class="small" style="text-align: justify;font-size: 10px; margin-top: 12px; line-height: 10px;">Вся представленная на сайте информация, касающаяся наличия, комплектации, технических характеристик, цветовых сочетаний, а также стоимости носит информационный характер и не является публичной офертой, определяемой положениями Статьи 437 ГК РФ. Для получения подробной информации обращайтесь к менеджерам Интернет-Магазин по тел. +7(929)601-17-76.
+			<p class="small" style="text-align: justify;font-size: 10px; margin-top: 12px; line-height: 10px; margin-bottom: 12px">Вся представленная на сайте информация, касающаяся наличия, комплектации, технических характеристик, цветовых сочетаний, а также стоимости носит информационный характер и не является публичной офертой, определяемой положениями Статьи 437 ГК РФ. Для получения подробной информации обращайтесь к менеджерам Интернет-Магазин по тел. +7(929)601-17-76.
 				Опубликованная на сайте информация может быть изменена в любое время без предварительного уведомления.</p></div>
 
 		</div>
