change contacts, add delivery info

--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -29,8 +29,21 @@
 				</div>
 			</div>
 		</div>
+<div class="location">
+	<div class="delivery">
+<i class="bi bi-alarm"></i>
+		<h4>Доставка</h4>
+			<p>Доставка по Москве и Московской области: </p>
+
+			<p>Доставка осуществляется при заказе от 3000 руб. Стоимость доставки - 300 руб.</p>
+			<p>При сумме заказа от 10000 руб. - доставка бесплатна.</p>
+			<p>По желанию клиента возможна доставка транспортными компаниями и курьерскими службами.</p>
+
+			<p>Самый лучший, надежный, качественный, экономичный и моментальный способ оформления заказа — это позвонить нам по номеру +7-929-601-17-76 с 9:00 до 20:00.</p>
+			<p>Доставка в регионы осуществляется транспортными компаниями по согласованию с клиентом</p>
+	</div>
+</div>
 
 		<div class="clr"></div>
 
-	</div>
 {%endblock%}
