--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1410,7 +1410,6 @@ td:first-child {
 	padding: 0px 97px;
 }
 .location-1 {
-	height: 368px;
 	width: 368px;
 	border: 1px solid #9c9c9c;
 	margin: 71px 28px 122px 0px;
@@ -1811,4 +1810,19 @@ a {
     color: #555;
     font-size: large;
     text-align:justify;
+}
+
+.delivery {
+	width: 700px;
+	border: 1px solid #9c9c9c;
+	margin-top: 72px;
+	float: right;
+}
+.delivery p {
+    color: #6c6c6c;
+    font-size: 16px;
+    font-weight: 700;
+    text-indent: 1.5em; /* Отступ первой строки */
+    text-align: justify;
+    padding: 0px 20px;
 }
