--- a/static/css/style.css
+++ b/static/css/style.css
@@ -694,6 +694,7 @@ html, body {
 	width: 1366px;
 	margin: 0 auto;
 	min-height: 100%;
+	max-width: none;
 }
 .collapse:not(.show) {
     display:block;
