--- a/main/templates/main/product.html
+++ b/main/templates/main/product.html
@@ -77,7 +77,12 @@
 				<div class="description">
 					<h3 class="big-bold">{{product.category}}</h3>
 					<h3 class="red">{{product.name}}</h3>
-					<p class="price"> {{product.price}} <span>руб</span></p>
+					{%if product.sale_price%}
+						<p class="price" style="text-decoration: line-through;"> {{product.price}}<span>руб</span></p>
+						<p class="price" style="color:red;"> {{product.sale_price}} <span>руб</span></p>
+					{%else%}
+						<p class="price"> {{product.price}}<span>руб</span></p>
+					{%endif%}
 					<a href="{%url 'basket:add' product.pk%}" class="red-button">
 						заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
 					</a>
