--- a/main/templates/main/products_list.html
+++ b/main/templates/main/products_list.html
@@ -60,7 +60,13 @@
                       <div class="text">
 
                             <h4>{{product.name| truncatewords:5}}</h4>
-                            <p>{{product.price}} р.</p>
+                          {%if product.sale_price%}
+                            <p><span style="text-decoration: line-through">{{product.price}} руб</span>
+                                <span style="color:red">{{product.price}} руб</span></p>
+                          {%else%}
+                            <p>{{product.price}} руб</p>
+                          {%endif%}
+
                       </div>
                     </div>
                 </div>
