--- a/main/templates/main/products.html
+++ b/main/templates/main/products.html
@@ -27,7 +27,12 @@
 				<div class="description">
 					<h3 class="big-bold">{{hot_product.category}}</h3>
 					<h3 class="red">горячее предложение</h3>
-					<p class="price"> {{hot_product.price}} <span>руб</span></p>
+					{%if hot_product.sale_price%}
+					<p class="price"> <span style="text-decoration:line-through">{{hot_product.price}} </span></p>
+					<p class="price" style="color: red"> {{hot_product.sale_price}} <span>руб</span></p>
+					{%else%}
+						<p class="price">{{hot_product.price}} <span>руб</span></p>
+					{%endif%}
 					<a href="{%url 'basket:add' hot_product.pk%}" class="red-button">
 						заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
 					</a>
