--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -19,6 +19,9 @@
 		</div>
 	{%endblock%}
 {%block content%}
+<div style="margin-top: 100px">
+	<img src="/static/img/акция1.jpg" width="100%">
+</div>
 		<div class="featured">
 			<div class="featured-menu">
 					<a class="active" href="#">Популярные</a>
