--- a/main/templates/main/products.html
+++ b/main/templates/main/products.html
@@ -10,11 +10,12 @@
 		</div>
 {%endblock%}
 {%block content%}
-
 		<div class="details">
+			<div class="type-menu clearfix">
+			{%include 'main/inc/inc_type_menu.html'%}
+				</div>
 			<div class="links clearfix">
 				{%include 'main/inc/inc_categories_menu.html'%}
-
 			</div>
 
 			<div class="details-products">
