--- a/main/templates/main/products_list.html
+++ b/main/templates/main/products_list.html
@@ -1,13 +1,5 @@
 {%extends 'main/base.html'%}
 {%load static%}
-{%block css%}
-<link rel="stylesheet" type="text/css" href="{%static 'css/style.css'%}">
-		<link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css'%}">
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Neucha&family=Orelega+One&family=Rubik:ital,wght@1,500&display=swap" rel="stylesheet">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-{%endblock%}
-
 {%block menu%}
     <div class="hero-white">
         <div class="header clearfix">
@@ -18,6 +10,9 @@
 
 {%block content%}
     <div class="detalis">
+        <div class="type-menu clearfix">
+			{%include 'main/inc/inc_type_menu.html'%}
+				</div>
         <div class="links clearfix">
             {%include 'main/inc/inc_categories_menu.html'%}
         </div>
@@ -27,8 +22,6 @@
                 <h2>
                     Категория: "{{category.name|title}}"
                 </h2>
-
-
             </div>
             <div aria-label="Page navigation example">
                       <ul class="pagination">
@@ -48,9 +41,11 @@
                           </a>
                         </li>
                             {% endif %}
+                          <button type="button" class="btn btn-light"><a href="{%url 'products:by_price' category.pk%}">по цене</a></button>
                       </ul>
                     </div>
             <div class="category-products clearfix">
+
                 {%for product in products%}
                 <div class="block">
                     <div class="card" style="width: 19rem;">
