--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="yandex-verification" content="12c3a995b036b74c" />
 	<title>
 		{% block title%}
 			{{title| upper}}
@@ -16,6 +17,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Neucha&family=Orelega+One&family=Rubik:ital,wght@1,500&display=swap" rel="stylesheet">
 	{%endblock%}
+
 	{%block js%}
 	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
