--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -11,10 +11,10 @@
 	</title>
 	{%block css%}
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
 		<link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css'%}">
 		<link rel="stylesheet" type="text/css" href="{%static 'css/style.css'%}">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link rel="icon" href="{%static 'img/favicon.ico'%}" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css2?family=Neucha&family=Orelega+One&family=Rubik:ital,wght@1,500&display=swap" rel="stylesheet">
 	{%endblock%}
 
