--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css'%}">
 		<link rel="stylesheet" type="text/css" href="{%static 'css/style.css'%}">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link rel="icon" href="{%static 'img/favicon.ico'%}" type="image/x-icon">
+		<link rel="icon" href="{%static 'img/favicon-2.ico'%}" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css2?family=Neucha&family=Orelega+One&family=Rubik:ital,wght@1,500&display=swap" rel="stylesheet">
 	{%endblock%}
 
