--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -1,6 +1,7 @@
 {%extends 'main/base.html'%}
 {%load static%}
 {%block menu%}
+<meta name="description" content="Лучи Света. Контакты. Информация. Доставка"/>
 		<div class="hero">
 			<div class="header clearfix">
 				<a class="logo">ЛУЧИ СВЕТА</a>
