--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,6 +1,8 @@
 {%extends 'main/base.html'%}
 {%load static%}
 	{%block menu%}
+<meta name="description" content="Лучи Света - интернет магазин. Интерьерные светильники потолочные, настенные, напольные, встраиваемые,
+ландшафные, светодиодные ленты. Доставка, скидки, акции"/>
 		<div class="slider">
 			<div class="header clearfix">
 				<p class="logo">ЛУЧИ СВЕТА</p>
