--- a/main/templates/main/products.html
+++ b/main/templates/main/products.html
@@ -1,7 +1,7 @@
 {%extends 'main/base.html'%}
 {%load static%}
 {%block menu%}
-
+<meta name="description" content="Каталог, продукция, бренды. Интерьерные светильники "/>
 		<div class="hero-white">
 			<div class="header clearfix">
 				<p class="logo">ЛУЧИ СВЕТА</p>
