--- a/main/templates/main/products_list.html
+++ b/main/templates/main/products_list.html
@@ -1,6 +1,7 @@
 {%extends 'main/base.html'%}
 {%load static%}
 {%block menu%}
+<meta name="description" content="светильники (бра, торшеры, люстры, светодиодные ленты) фирмы{{category.name}}"/>
     <div class="hero-white">
         <div class="header clearfix">
             {%include 'main/inc/inc_main_menu.html'%}
