--- a/main/templates/main/types.html
+++ b/main/templates/main/types.html
@@ -2,6 +2,8 @@
 {%load static%}
 
 {%block menu%}
+<meta name="description" content="{{types.name}}"/>
+
     <div class="hero-white">
         <div class="header clearfix">
             {%include 'main/inc/inc_main_menu.html'%}
