--- a/main/templates/main/inc/inc_categories_menu.html
+++ b/main/templates/main/inc/inc_categories_menu.html
@@ -8,7 +8,9 @@
         <a href="{%url 'products:category' 0%}">Все</a>
     </li>
     {%for item in links_menu%}
+    {%if item.name != "Nowodvorski" and item.name != "Evronomer"%}
         <li><a href="{%url 'products:category' item.pk%}" {%if request.resolver_match.kwargs.category_pk == item.pk %}
                class="active"{%endif%}>{{item.name}}</a></li>
+    {%endif%}
     {%endfor%}
 </ul>
