--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -55,8 +55,8 @@
 			<div class="clearfix">
 				<div class="text-footer">
 					<h3><a href="{% url 'contacts'%}" >контакты</a></h3>
-					<p style="margin: 1px;">+7-929-601-1776</p>
-					<p>+7-995-787-1776</p>
+					<p style="margin: 1px;"><img src="{%static 'img/telephone.svg'%}" style="margin-right: 5px"><img src="{%static 'img/whatsapp.svg'%}"style="margin-right: 5px">+7-929-601-1776</p>
+					<p><img src="{%static 'img/telephone.svg'%}" style="margin-right: 5px"><img src="{%static 'img/whatsapp.svg'%}"style="margin-right: 5px">+7-995-787-1776</p>
 					<p>luchi_sveta@list.ru</p>
 				</div>
 				<div class="text-footer">
