--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -17,8 +17,8 @@
 				<h4>Москва</h4>
 				<div class="contacts">
 					<h5>Телефон</h5>
-					<p>+7-929-601-1776</p>
-					<p>+7-995-787-1776</p>
+					<p><img src="{%static 'img/telephone.svg'%}" style="margin-right: 5px"><img src="{%static 'img/whatsapp.svg'%}"style="margin-right: 5px">+7-929-601-1776</p>
+					<p><img src="{%static 'img/telephone.svg'%}" style="margin-right: 5px"><img src="{%static 'img/whatsapp.svg'%}"style="margin-right: 5px">+7-995-787-1776</p>
 				</div>
 				<div class="contacts">
 					<h5>Email</h5>
