--- a/main/templates/main/products_list.html
+++ b/main/templates/main/products_list.html
@@ -85,7 +85,9 @@
                             {% endif %}
                       </ul>
                     </nav>
+            <a href="#" title="Вернуться к началу" class="topbutton">^Наверх</a>
         </div>
+
     </div>
     <div class="clr"></div>
 {%endblock%}
