--- a/main/templates/main/inc/inc_main_menu.html
+++ b/main/templates/main/inc/inc_main_menu.html
@@ -6,9 +6,9 @@
       <ul class="navbar-nav">
         <li class="nav-item ">
             {% if request.resolver_match.url_name == 'main' %}
-            <a class="nav-link active" aria-current="page" href= "{% url 'main'%}">домой</a>
+            <a class="nav-link active" aria-current="page" href= "{% url 'main'%}">главная</a>
             {%else%}
-            <a class="nav-link" aria-current="page" href= "{% url 'main'%}">домой</a>
+            <a class="nav-link" aria-current="page" href= "{% url 'main'%}">главная</a>
             {%endif%}
         </li>
         <li class="nav-item">
