--- a/main/templates/main/types.html
+++ b/main/templates/main/types.html
@@ -65,6 +65,8 @@
                 </div>
                 {%endfor%}
             </div>
+                        <a href="#" title="Вернуться к началу" class="topbutton">^Наверх</a>
+
             <nav aria-label="Page navigation example">
                       <ul class="pagination">
                           {% if products.has_previous %}
