--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1260,7 +1260,7 @@ html, body {
     color: #6c6c6c;
 }
 .text-footer {
-	margin-top: 120px;
+	margin-top: 40px;
 	width: 221px;
 	float: left;
 	margin-right: 68px;
@@ -1850,4 +1850,23 @@ a {
 
 .navbar-nav {
     display: float;
+}
+
+.topbutton {
+    width:100px;
+    border:2px solid #ccc;
+    background:#f7f7f7;
+    text-align:center;
+    padding:10px;
+    position:fixed;
+    bottom:50px;
+    right:50px;
+    cursor:pointer;
+    color:#333;
+    font-family:verdana;
+    font-size:12px;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -khtml-border-radius: 5px;
 }
